Updating ove-client
